--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "./components/image-set";
 @import "./components/social";
 @import "./components/subscribe";
+@import "./components/modal";
 
 
 @import "./layout/contacts";
